--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,13 @@
     ],
     "require": {
         "php": "^8.4",
-        "illuminate/database": "^11.0|^12.0",
-        "illuminate/support": "^11.0|^12.0",
+        "illuminate/database": "^12.0",
+        "illuminate/support": "^12.0",
         "nesbot/carbon": "^2.0|^3.0",
         "rufhausen/db2-driver": "dev-master"
     },
     "require-dev": {
-        "orchestra/testbench": "^9.0|^10.0",
+        "orchestra/testbench": "^10.0",
         "phpunit/phpunit": "^11.0"
     },
     "autoload": {
