--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "illuminate/database": "^12.0",
         "illuminate/support": "^12.0",
         "nesbot/carbon": "^2.0|^3.0",
-        "rufhausen/db2-driver": "dev-master"
+        "rufhausen/db2-driver": "*"
     },
     "require-dev": {
         "orchestra/testbench": "^10.0",
