Add make:db2-model command with config-based schemas

--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,9 @@
     },
     "extra": {
         "laravel": {
-            "providers": []
+            "providers": [
+                "CodyJHeiser\\Db2Eloquent\\Db2EloquentServiceProvider"
+            ]
         }
     },
     "scripts": {
